<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:KnockMessenger="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/friendsActivity_search"
        android:title="@string/codesActivity_search_title"
        android:icon="@mipmap/ic_search_white_48dp"
        KnockMessenger:actionViewClass="android.support.v7.widget.SearchView"
        KnockMessenger:showAsAction="collapseActionView|ifRoom"/>

    <item
        android:id="@+id/friendsActivity_sync"
        android:title="@string/friendsActivity_sync"
        android:icon="@mipmap/ic_cached_white_48dp"
        KnockMessenger:showAsAction="always" />

    <item
        android:id="@+id/friendsActivity_browse"
        android:title="@string/friendsActivity_browse_friends"
        android:icon="@mipmap/ic_group_white_48dp"
        KnockMessenger:showAsAction="always" />

</menu>